remove main-carrousel component

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     <link rel="stylesheet" href="./components/wrapper-card.css">
     <link rel="stylesheet" href="./components/card-project.css">
     <link rel="stylesheet" href="./components/main-description.css">
-    <link rel="stylesheet" href="./components/main-carousel.css">
     <link rel="stylesheet" href="./components/button-arrow.css">
     <link rel="stylesheet" href="./components/node-card.css">
     <link rel="stylesheet" href="./components/form-contact.css">
@@ -165,51 +164,6 @@
     <section class="main-section -about">
         <h2 class="main-title -second">Sobre</h2>
 
-        <section class="main-carousel">
-            <button class="button-arrow -left"><span class="content">Avançar</span></button>
-            
-            <div class="items">
-                <div class="elements">
-                    <figure class="node-card">
-                        <figcaption class="title">2012</figcaption>
-                        <div class="logo">
-                            <img src="img/logo-locaweb.png" alt="Logo da Locaweb" >
-                        </div>
-                    </figure>
-                    <figure class="node-card -clean">
-                        <figcaption class="title">2014</figcaption>
-                        <div class="logo">
-                            <img src="img/logo-caelum.png" alt="Logo da Caelum" >
-                        </div>
-                    </figure>
-                    <figure class="node-card -first">
-                        <figcaption class="title">2016</figcaption>
-                        <div class="logo">
-                            <img src="img/logo-getninjas.png" alt="Logo da GetNinjas" >
-                        </div>
-                    </figure>
-                    <figure class="node-card -clean">
-                        <figcaption class="title">2017</figcaption>
-                        <div class="logo">
-                            <img src="img/logo-caelum.png" alt="Logo da Caelum" >
-                        </div>
-                    </figure>
-                    <figure class="node-card">
-                        <figcaption class="title">2018</figcaption>
-                        <div class="logo">
-                            <img src="img/logo-impulso.png" alt="Logo da Impulso" >
-                        </div>
-                    </figure>
-                    <figure class="node-card -first">
-                        <figcaption class="title">2019</figcaption>
-                        <div class="logo">
-                            <img src="img/logo-collabcode(1).png" alt="Logo da Collabcode" >
-                        </div>
-                    </figure>
-                </div>
-            </div>
-            <button class="button-arrow -right"><span class="content">Voltar</span></button>
-        </section>
         <p class="main-description">Desenvolver Frontend, me formei em Bacharelado em Sistemas de Informação em 2016. Atualmente trabalhando como suporte técnico no qual já estou no mercado há 3 anos. Possuo foco em desenvolvimento com Javascript, TypeScript, React, Styled-Components e dentre outras tecnologias e ferramentas para criação de aplicações web/mobile. Me considero persistente e dedicado para enfrentar os desafios do dia a dia. Se pudesse me definir em uma frase seria : "O esforço vence o talento."
         </p>
     </section>
@@ -246,6 +200,6 @@
             </a>
     </footer>
 
-    <script src="js/components/main-carousel.js"></script>
+    <script src=""></script>
 </body>
 </html>
