change logo component main-section -project

--- a/index.html
+++ b/index.html
@@ -144,17 +144,17 @@
     <section class="main-section -project">
         <h2 class="main-title -second">Projetos</h2>
         <div class="wrapper-card">
-            <a href="https://firedlabs.com" target="_blank">
+            <a href="https://monsor3s.github.io/hundlepage/" target="_blank">
                 <figure class="card-project">
-                    <img class="logo" src="./img/logo-firedlabs.png" alt="logo firelabs">
+                    <img class="logo" src="./img/logo-hundle.svg" alt="logo hundle">
                 </figure>
             </a>
-            <a href="https:collabcode.training" target="_blank">
+            <a href="https://monsor3s.github.io/intro-section/" >
                 <figure class="card-project -blue">
-                    <img class="logo" src="./img/logo-collabcode.png" alt="logo collabcode">
+                    <img class="logo -intro" src="./img/logo-introsection.svg" alt="logo introsection">
                 </figure>
             </a>
-            <a href="https://monsor3s.github.io/" target="_blank">
+            <a href="#" target="_blank">
                 <figure class="card-project">
                     <img class="logo" src="./img/portfolio.png" alt="logo portifolio">
                 </figure>
