change icons main-footer

--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
         </form>
     </section>
     <footer class="main-footer">
-            <a class="action" href="" target="_blank">
-                <img src="img/twitter1.png" alt="logo twitter">
+            <a class="action" href="https://github.com/monsor3s" target="_blank">
+                <img src="img/github.png" alt="logo github">
             </a>
-            <a class="action" href="" target="_blank">
-                <img src="img/youtube1.png" alt="logo youtube">
+            <a class="action" href="https://www.linkedin.com/in/marlon-monsores-380408b2/" target="_blank">
+                <img src="img/linkedin.png" alt="logo linkedin">
             </a>
-            <a class="action" href="" target="_blank">
-                <img src="img/discord1.png" alt="logo discord">
+            <a class="action" href="https://twitter.com/monsoresdev" target="_blank">
+                <img src="img/twitter.png" alt="logo twitter">
             </a>
     </footer>
 
