placed file in button download cv

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="action-header"href="">Projetos</a>
             <a class="action-header"href="">Sobre</a>
             <a class="action-header"href="">Contatos</a>
-            <a class="main-button" href="" lang="en">Download CV</a>
+            <a class="main-button" href="path_to_file" download="Profile-1.pdf" lang="en">Download CV</a>
 
             <a href="#" class="icon-close">X</a>
         </nav>
@@ -59,7 +59,7 @@
                 <h2 class="main-subtitle">FrontEnd Developer</h2>
             </div>
             <div class="navigation">
-                <a class="main-button -section" href="" lang="en">Download CV</a>
+                <a class="main-button -section" href="" href="path_to_file" download="Profile-1.pdf" lang="en">Download CV</a>
                 <a class="main-button -section" href="">Contatos</a>
             </div>
         </div>
@@ -77,10 +77,10 @@
                 </div>
             </article>
             <article class="skill-tec">
-                <img class="icon" src="./img/ico_nodejs.png" alt="logo NodeJs">
+                <img class="icon" src="./img/ico_restapi.png" alt="logo Rest API">
                 <div class="right">
-                    <h3 class="title">NodeJS</h3>
-                        <progress class="progress-bar" max="100" value="30">
+                    <h3 class="title">Rest API</h3>
+                        <progress class="progress-bar" max="100" value="50">
                             70%
                         </progress>
                 </div>
@@ -95,10 +95,10 @@
                 </div>
             </article>
             <article class="skill-tec">
-                <img class="icon" src="./img/ico_tdd.png" alt="logo TDD">
+                <img class="icon" src="./img/ico_figma.png" alt="logo Figma">
                 <div class="right">
-                    <h3 class="title">TDD</h3>
-                        <progress class="progress-bar" max="100" value="10">
+                    <h3 class="title">Figma</h3>
+                        <progress class="progress-bar" max="100" value="70">
                             70%
                         </progress>
                 </div>
@@ -113,10 +113,10 @@
                 </div>
             </article>
             <article class="skill-tec">
-                <img class="icon" src="./img/ico_restapi.png" alt="logo Rest Api">
+                <img class="icon" src="./img/ico_photoshop.png" alt="logo Photoshop">
                 <div class="right">
-                    <h3 class="title">Rest Api</h3>
-                        <progress class="progress-bar" max="100" value="10">
+                    <h3 class="title">Photoshop</h3>
+                        <progress class="progress-bar" max="100" value="60">
                             70%
                         </progress>
                 </div>
@@ -131,10 +131,10 @@
                 </div>
             </article>
             <article class="skill-tec">
-                <img class="icon" src="./img/ico_ux.png" alt="logo UX">
+                <img class="icon" src="./img/ico_illustrator.png" alt="logo Illustrator">
                 <div class="right">
-                    <h3 class="title">UX</h3>
-                        <progress class="progress-bar" max="100" value="70">
+                    <h3 class="title">Illustrator</h3>
+                        <progress class="progress-bar" max="100" value="60">
                             70%
                         </progress>
                 </div>
