add img photo banner

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <a class="main-button -section" href="">Contatos</a>
             </div>
         </div>
+        <img src="./assets/perfilpixeladoport 2.png" alt="Photo banner" class="photo-banner">
     </section>  
     <section class="main-section">
         <h2 class="main-title -second">Skills</h2>
