change logo card-project.-green

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <header class="main-header">
-        <h2 class="main-subtitle">Monsor3sDev</h2>
+        <h2 class="main-subtitle">&lt;Monsor3sDev/&gt;</h2>
 
         <a href="#menu" class="icon-menu">Abri Menu</a>
 
@@ -81,7 +81,7 @@
                 <img class="icon" src="./img/ico_restapi.png" alt="logo Rest API">
                 <div class="right">
                     <h3 class="title">Rest API</h3>
-                        <progress class="progress-bar" max="100" value="50">
+                        <progress class="progress-bar" max="100" value="20">
                             70%
                         </progress>
                 </div>
@@ -156,8 +156,9 @@
                 </figure>
             </a>
             <a href="#" target="_blank">
-                <figure class="card-project">
-                    <img class="logo" src="./img/portfolio.png" alt="logo portifolio">
+                <figure class="card-project -green">
+                    <a class="logo">&lt;Monsor3sDev/&gt;</a>
+                    <!-- <img class="logo" src="./img/portfolio.png" alt="logo portifolio"> -->
                 </figure>
             </a>    
         </div>
