add link to home page main-button thankspage

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <form class="form-contact" action="https://api.staticforms.xyz/submit" method="post">
             <input type="hidden" name="accessKey" value="1cb17734-ce39-4e11-a3c5-adbea0d8ae06">
-            <input type="hidden" name="redirectTo" value="https://ge.globo.com">
+            <input type="hidden" name="redirectTo" value="https://monsor3s.github.io/thankspage">
 
             <div class="wrap-form">
                 <div class="">
