--- a/thankspage.html
+++ b/thankspage.html
@@ -39,7 +39,7 @@
         <div class="wrapper-thanks">
             <h2 class="main-title -thanks">Obrigado pelo seu contato!</h2>
             <span class="main-subtitle -thanks">Retornarei em breve</span>
-            <button class="main-button">Voltar para home</button>
+            <a class="main-button" href="./index.html">Voltar para home</a>
         </div>
     </section>
 </body>
