change name inputName

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="wrap-form">
                 <div class="">
                     <label class="main-label" for="inputName">Nome</label>
-                    <input class="main-input" type="text" id="inputName" name="nome">
+                    <input class="main-input" type="text" id="inputName" name="name">
                 </div>
                 <div class="">
                     <label class="main-label" for="inputEmail">Email</label>
