add anchors links to menu header

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <a href="#menu" class="icon-menu">Abri Menu</a>
 
         <nav id="menu" class="menu"> 
-            <a class="action-header"href="">Skills</a>
-            <a class="action-header"href="">Projetos</a>
-            <a class="action-header"href="">Sobre</a>
-            <a class="action-header"href="">Contatos</a>
+            <a class="action-header"href="#skills">Skills</a>
+            <a class="action-header"href="#project">Projetos</a>
+            <a class="action-header"href="#about">Sobre</a>
+            <a class="action-header"href="#contact">Contatos</a>
             <a class="main-button" href="path_to_file" download="Profile-1.pdf" lang="en">Download CV</a>
 
             <a href="#" class="icon-close">X</a>
@@ -60,12 +60,12 @@
             </div>
             <div class="navigation">
                 <a class="main-button -section" href="" href="path_to_file" download="Profile-1.pdf" lang="en">Download CV</a>
-                <a class="main-button -section" href="">Contatos</a>
+                <a class="main-button -section" href="#contact">Contatos</a>
             </div>
         </div>
         <img src="./assets/perfilpixeladoport 2.png" alt="Photo banner" class="photo-banner">
     </section>  
-    <section class="main-section">
+    <section class="main-section" id="skills">
         <h2 class="main-title -second">Skills</h2>
         <div class="wrapper-skill">
             <article class="skill-tec">
@@ -142,7 +142,7 @@
             </article>
         </div>  
     </section>
-    <section class="main-section -project">
+    <section class="main-section -project" id="project">
         <h2 class="main-title -second">Projetos</h2>
         <div class="wrapper-card">
             <a href="https://monsor3s.github.io/hundlepage/" target="_blank">
@@ -162,13 +162,13 @@
             </a>    
         </div>
     </section>
-    <section class="main-section -about">
+    <section class="main-section -about" id="about">
         <h2 class="main-title -second">Sobre</h2>
 
         <p class="main-description">Desenvolver Frontend, me formei em Bacharelado em Sistemas de Informação em 2016. Atualmente trabalhando como suporte técnico no qual já estou no mercado há 3 anos. Possuo foco em desenvolvimento com Javascript, TypeScript, React, Styled-Components e dentre outras tecnologias e ferramentas para criação de aplicações web/mobile. Me considero persistente e dedicado para enfrentar os desafios do dia a dia. Se pudesse me definir em uma frase seria : "O esforço vence o talento."
         </p>
     </section>
-    <section class="main-section -contact">
+    <section class="main-section -contact" id="contact">
         <h2 class="main-title -second">Contatos</h2>
 
         <form class="form-contact" action="https://api.staticforms.xyz/submit" method="post">
