correct alignment section project

--- a/index.html
+++ b/index.html
@@ -155,11 +155,9 @@
                     <img class="logo -intro" src="./img/logo-introsection.svg" alt="logo introsection">
                 </figure>
             </a>
-            <a href="#" target="_blank">
-                <figure class="card-project -green">
-                    <a class="logo">&lt;Monsor3sDev/&gt;</a>
-                </figure>
-            </a>    
+            <a href="#" class="card-project -green">
+                <h2 class="main-subtitle -logoproject">&lt;Monsor3sDev/&gt;</h2>
+            </a>
         </div>
     </section>
     <section class="main-section -about" id="about">
