add link to home page logo header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <header class="main-header">
-        <h2 class="main-subtitle">&lt;Monsor3sDev/&gt;</h2>
+        <a href="index.html" class="main-subtitle">&lt;Monsor3sDev/&gt;</a>
 
         <a href="#menu" class="icon-menu">Abri Menu</a>
 
