--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             </a>
     </footer>
 
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/validForm.js"></script>
+    <script src="./scripts/menu.js"></script>
 </body>
 </html>
