change px to rem in font-size's

--- a/index.html
+++ b/index.html
@@ -40,16 +40,17 @@
     <header class="main-header">
         <a href="index.html" class="main-subtitle">&lt;Monsor3sDev/&gt;</a>
 
-        <a href="#menu" class="icon-menu">Abri Menu</a>
+        <!-- <a href="#menu" class="icon-menu">Abri Menu</a> -->
 
         <nav id="menu" class="menu"> 
+            <!-- <a href="#" class="icon-close">X</a> -->
+
             <a class="action-header"href="#skills">Skills</a>
             <a class="action-header"href="#project">Projetos</a>
             <a class="action-header"href="#about">Sobre</a>
             <a class="action-header"href="#contact">Contatos</a>
             <a class="main-button" href="path_to_file" download="Profile-1.pdf" lang="en">Download CV</a>
 
-            <a href="#" class="icon-close">X</a>
         </nav>
     </header>
     <section class="main-banner">
