create component section-hero

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./components/icon-menu.css">
     <link rel="stylesheet" href="./components/icon-close.css">
     <link rel="stylesheet" href="./components/main-banner.css">
+    <link rel="stylesheet" href="./components/section-hero.css">
     <link rel="stylesheet" href="./components/main-button.css">
     <link rel="stylesheet" href="./components/main-title.css">
     <link rel="stylesheet" href="./components/main-subtitle.css">
@@ -34,6 +35,7 @@
     <link rel="stylesheet" href="./components/main-label.css">
     <link rel="stylesheet" href="./components/main-footer.css">
     <link rel="stylesheet" href="./components/main-input.css">
+    <link rel="stylesheet" href="./components/responsive.css">
     
 </head>
 <body>
@@ -54,17 +56,19 @@
         </nav>
     </header>
     <section class="main-banner">
-        <div class="wrapper">
-            <div class="main-box">
-                <h1 class="main-title">Marlon Monsores</h1>
-                <h2 class="main-subtitle">FrontEnd Developer</h2>
+        <div class="section-hero">
+            <div class="wrapper">
+                <div class="main-box">
+                    <h1 class="main-title">Marlon Monsores</h1>
+                    <h2 class="main-subtitle">FrontEnd Developer</h2>
+                </div>
+                <div class="navigation">
+                    <a class="main-button -section" href="" href="path_to_file" download="Profile-1.pdf" lang="en">Download CV</a>
+                    <a class="main-button -section" href="#contact">Contatos</a>
+                </div>
             </div>
-            <div class="navigation">
-                <a class="main-button -section" href="" href="path_to_file" download="Profile-1.pdf" lang="en">Download CV</a>
-                <a class="main-button -section" href="#contact">Contatos</a>
-            </div>
+            <img src="./assets/perfilpixeladoport 2.png" alt="Photo banner" class="photo-banner">
         </div>
-        <img src="./assets/perfilpixeladoport 2.png" alt="Photo banner" class="photo-banner">
     </section>  
     <section class="main-section" id="skills">
         <h2 class="main-title -second">Skills</h2>
