--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
     <header class="main-header">
         <a href="index.html" class="main-subtitle">&lt;Monsor3sDev/&gt;</a>
 
-        <!-- <a href="#menu" class="icon-menu">Abri Menu</a> -->
-
-        <nav id="menu" class="menu"> 
-            <!-- <a href="#" class="icon-close">X</a> -->
-
-            <a class="action-header"href="#skills">Skills</a>
-            <a class="action-header"href="#project">Projetos</a>
-            <a class="action-header"href="#about">Sobre</a>
-            <a class="action-header"href="#contact">Contatos</a>
-            <a class="main-button" href="path_to_file" download="Profile-1.pdf" lang="en">Download CV</a>
-
+        <a href="#menu" id="btn-mobile" class="icon-menu" >Abri Menu</a>        
+        <nav id="nav" class="nav on" >
+                <ul id="menu" class="menu-section">
+                    <li><a class="action-header" href="#skills">Skills</a></li>
+                    <li><a class="action-header" href="#project">Projetos</a></li>
+                    <li><a class="action-header" href="#about">Sobre</a></li>
+                    <li><a class="action-header" href="#contact">Contatos</a></li>
+                    <li><a class="main-button" href="path_to_file" download="Profile-1.pdf" lang="en">Download CV</a></li>
+                </ul>
+            
+                <a href="#menu" class="icon-close">X</a>
         </nav>
     </header>
     <section class="main-banner">
