finished script dropdown menu-section

--- a/index.html
+++ b/index.html
@@ -42,18 +42,20 @@
     <header class="main-header">
         <a href="index.html" class="main-subtitle">&lt;Monsor3sDev/&gt;</a>
 
-        <a href="#menu" id="btn-mobile" class="icon-menu" >Abri Menu</a>        
-        <nav id="nav" class="nav on" >
-                <ul id="menu" class="menu-section">
-                    <li><a class="action-header" href="#skills">Skills</a></li>
-                    <li><a class="action-header" href="#project">Projetos</a></li>
-                    <li><a class="action-header" href="#about">Sobre</a></li>
-                    <li><a class="action-header" href="#contact">Contatos</a></li>
-                    <li><a class="main-button" href="path_to_file" download="Profile-1.pdf" lang="en">Download CV</a></li>
-                </ul>
+        <div class="menu-section">
+            <a class="icon-menu" >Abri Menu</a>
+            <nav id="nav" class="nav" >
+                    <ul class="wrapper-menu">
+                        <li><a class="action-header" href="#skills">Skills</a></li>
+                        <li><a class="action-header" href="#project">Projetos</a></li>
+                        <li><a class="action-header" href="#about">Sobre</a></li>
+                        <li><a class="action-header" href="#contact">Contatos</a></li>
+                        <li><a class="main-button" href="path_to_file" download="Profile-1.pdf" lang="en">Download CV</a></li>
+                    </ul>
             
-                <a href="#menu" class="icon-close">X</a>
-        </nav>
+                    <a class="icon-close">X</a>
+            </nav>
+        </div>
     </header>
     <section class="main-banner">
         <div class="section-hero">
