--- a/thankspage.html
+++ b/thankspage.html
@@ -16,24 +16,13 @@
     <link rel="stylesheet" href="./components/icon-close.css">
     <link rel="stylesheet" href="./components/main-banner.css">
     <link rel="stylesheet" href="./components/wrapper-thanks.css">
+    <link rel="stylesheet" href="./components/responsive.css">
 
     <title>Monsor3sDev</title>
 </head>
 <body>
-    <header class="main-header">
+    <header class="main-header -thanks">
         <a href="index.html" class="main-subtitle">&lt;Monsor3sDev/&gt;</a>
-
-        <a href="#menu" class="icon-menu">Abri Menu</a>
-
-        <nav id="menu" class="menu"> 
-            <a class="action-header"href="">Skills</a>
-            <a class="action-header"href="">Projetos</a>
-            <a class="action-header"href="">Sobre</a>
-            <a class="action-header"href="">Contatos</a>
-            <a class="main-button" href="path_to_file" download="Profile-1.pdf" lang="en">Download CV</a>
-
-            <a href="#" class="icon-close">X</a>
-        </nav>
     </header>
     <section class="main-banner">
         <div class="wrapper-thanks">
